new proj/src/objects/GE_ES_Competitor__c.object
<CustomObject>
    <description>This is a generic competitor object created which can be used by all the other modules as well.</description>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_PRM_Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account plan name  linked to this section</inlineHelpText>
        <label>Account Plan</label>
        <referenceTo>GE_HQ_Account_Plan__c</referenceTo>
        <relationshipLabel>Competitors - PRM</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Area_Country__c</fullName>
        <inlineHelpText>What is the most important area/country covered by this competitor ?</inlineHelpText>
        <label>Area/ Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Competitor_s_Strategy__c</fullName>
        <inlineHelpText>What is the competitor&apos;s strategy in terms of Pricing, Technology, Customer Service, Systems, Turn-Key offerings,…</inlineHelpText>
        <label>Competitor’s Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Estimated_GE_Share__c</fullName>
        <inlineHelpText>What is the % of share GE could achieve for this specific area/country that is actually covered today by this specific competitor ?</inlineHelpText>
        <label>Estimated GE Share %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Estimated_Share__c</fullName>
        <inlineHelpText>What is the % of Competitor Share for the  product/market offering the channel partner serve ?</inlineHelpText>
        <label>Estimated Share %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Competitor - PRM</label>
    <nameField>
        <label>Competitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitors - PRM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Plan_Is_Approved</fullName>
        <active>true</active>
        <description>If Account Plan is &apos;Approved&apos; user shouldn&apos;t be able to create or edit Competitor</description>
        <errorConditionFormula>AND(AND( $Profile.Name &lt;&gt; &apos;GE_ES System Administrator&apos;, $Profile.Name &lt;&gt; &apos;System Administrator&apos;) ,ISPICKVAL( GE_PRM_Account_Plan__r.GE_PRM_Status__c , &apos;Approved&apos;))</errorConditionFormula>
        <errorMessage>You cannot create/edit Competitor since Account Plan is Approved</errorMessage>
    </validationRules>
</CustomObject>